<resources>
    <string name="app_name">OpenPot</string>
    <string name="rice">Rice</string>
    <string name="multigrain">Multigrain</string>
    <string name="porridge">Porridge</string>
    <string name="steam">Steam</string>
    <string name="yogurt">Yogurt</string>
    <string name="slow_cook">Slow Cook</string>
    <string name="poultry">Poultry</string>
    <string name="bean_chili">Bean/Chili</string>
    <string name="meat_stew">Meat/Stew</string>
    <string name="soup">Soup</string>
    <string name="saute">Sauté</string>
    <string name="manual">Manual</string>
    <string name="keep_warm">Keep Warm</string>
    <string name="cancel">Cancel</string>
    <string name="work_mode">Work Mode</string>
    <string name="na">N/A</string>
    <string name="remaining_time">Remaining Time</string>
    <string name="temperature">Temperature</string>
    <string name="pressure_level">Pressure Level</string>
    <string name="heating_level">Heating Level</string>
    <string name="connect">Connect</string>
    <string name="duration">Duration</string>
    <string name="mode">Mode</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="less">Less</string>
    <string name="normal">Normal</string>
    <string name="more">More</string>
    <string name="start">Start</string>
    <string name="delay_start">Delay Start</string>
    <string name="title_activity_command_settings">CommandSettings</string>
    <string name="pasteurize">Pasteurize</string>
    <string name="ferment">Ferment</string>
    <string name="title_activity_pot_settings">PotSettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="twelve_hr_clock">Display clock in 12 hour time</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="elevation_adjust">Elevation Adjustment</string>
    <string name="notification">Notification</string>
    <string name="sync_time">Sync Time</string>
    <string name="mil_time">24-Hour Time</string>
    <string name="timer1">Timer 1</string>
    <string name="timer2">Timer 2</string>
    <string name="on">On</string>
    <string name="timer">Timer</string>
    <string name="warm">Warm</string>
    <string name="off">Off</string>
    <string name="none">None</string>
    <string name="lid_open">Lid Open</string>
    <string name="thirty">30</string>
    <string name="ten">10</string>
    <string name="title_activity_recipe">RecipeActivity</string>
</resources>