<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icnIndicator"
        android:layout_width="66dp"
        android:layout_height="62dp"
        android:layout_gravity="right|top"
        app:srcCompat="@drawable/openpot"
        tools:srcCompat="@drawable/openpot" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:src="@tools:sample/avatars" /> -->

            <TextView
                android:id="@+id/lblWorkMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/work_mode" />

            <TextView
                android:id="@+id/txtWorkMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingRight="50dp"
                android:paddingBottom="10dp"
                android:text="@string/na"
                android:textAlignment="textEnd"
                android:textColor="@android:color/darker_gray" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:src="@tools:sample/avatars" /> -->

            <TextView
                android:id="@+id/lblRemainingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/remaining_time" />

            <TextView
                android:id="@+id/txtRemainingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingRight="50dp"
                android:paddingBottom="10dp"
                android:text="@string/na"
                android:textAlignment="textEnd"
                android:textColor="@android:color/darker_gray" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- <ImageView
                android:id="@+id/imageView3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:src="@tools:sample/avatars" /> -->

            <TextView
                android:id="@+id/lblTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/temperature" />

            <TextView
                android:id="@+id/txtTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingRight="50dp"
                android:paddingBottom="10dp"
                android:text="@string/na"
                android:textAlignment="textEnd"
                android:textColor="@android:color/darker_gray" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- <ImageView
                android:id="@+id/imageView4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:src="@tools:sample/avatars" /> -->

            <TextView
                android:id="@+id/lblPressureLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/pressure_level" />

            <TextView
                android:id="@+id/txtPressureLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingRight="50dp"
                android:paddingBottom="10dp"
                android:text="@string/na"
                android:textAlignment="textEnd"
                android:textColor="@android:color/darker_gray" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- <ImageView
                android:id="@+id/imageView5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:src="@tools:sample/avatars" /> -->

            <TextView
                android:id="@+id/lblHeatingLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/heating_level" />

            <TextView
                android:id="@+id/txtHeatingLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingRight="50dp"
                android:paddingBottom="10dp"
                android:text="@string/na"
                android:textAlignment="textEnd"
                android:textColor="@android:color/darker_gray" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="command"
            android:text="@string/rice"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnMultigrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="command"
            android:text="@string/multigrain"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnPorridge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="command"
            android:text="@string/porridge"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSteam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="command"
            android:text="@string/steam"
            android:textColor="@android:color/darker_gray"
            app:strokeColor="@color/black" />

        <Button
            android:id="@+id/btnYogurt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="command"
            android:text="@string/yogurt"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnSlowCook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="command"
            android:text="@string/slow_cook"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPoultry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="command"
            android:text="@string/poultry"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnBean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="command"
            android:text="@string/bean_chili"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnMeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="command"
            android:text="@string/meat_stew"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bntSoup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="command"
            android:text="@string/soup"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnSaute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="command"
            android:text="@string/saute"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnManual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="command"
            android:text="@string/manual"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnKeepWarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="command"
            android:text="@string/keep_warm"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_red_dark" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5" />
    </LinearLayout>

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="connectToDevice"
        android:text="@string/connect" />

</LinearLayout>